--- a/html/vase.html
+++ b/html/vase.html
@@ -173,7 +173,7 @@
                 <i class="bi bi-cart"></i> Acheter
               </button>
               <button class="btn btn-outline-light  btn-lg">
-                <i class="fa-solid fa-star"></i> Ajouter à la wishlist
+                <i class="fa-solid fa-star"></i> Ajouter aux favoris
               </button>
             </div>
               
