--- a/html/favoris.html
+++ b/html/favoris.html
@@ -409,6 +409,11 @@
           </div>
         </div>
       </div>
+       <!-- Bas du footer -->
+       <div class="text-center mt-4">
+        <p>&copy; 2024 ReStyle. Tous droits réservés.</p>
+      </div>
+    </div>
     </footer>
     <!---------------------------------------------------------------- footer --------------------------------------------------------------------------------------->
     <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
