--- a/html/mentionslegales.html
+++ b/html/mentionslegales.html
@@ -54,6 +54,25 @@
                 <li>Photo Isabelle: Photo de Godisable Jacob: <a href="https://www.pexels.com/fr-fr/photo/sweat-shirt-rose-pour-femme-et-jupe-a-carreaux-marron-794064/">Lien</a></li>
             </ul>
 
+            <p style="font-weight: bold;">Page Catalogue des articles</p>
+            <ul>
+                <li>Image Chaussures blanches à plateformes sur Pinterest: <a href="https://fr.pinterest.com/pin/652107221093572674/"> Lien</a></li>
+                <li>Image Baskets sur Pinterest: <a href="https://fr.pinterest.com/pin/732327589430523191/">Lien</a></li>
+                <li>Image chaussures Talons chics sur Pinterest:<a href="https://fr.pinterest.com/pin/921830617495901976/">Lien</a></li>
+                <li>Image Converses fleuries sur Pinterest: <a href="https://fr.pinterest.com/pin/1139199668244471305/">Lien</a></li>
+                <li>Image Robe noire élégante sur Pinterest: <a href="https://fr.pinterest.com/pin/633387440027120/">Lien</a></li>
+                <li>Image Pantalon classique sur Pinterest: <a href="https://fr.pinterest.com/pin/347480927506123029/">Lien</a></li>
+                <li>Image Ensemble chic sur Pinterest: <a href="https://kokania.com/cdn/shop/files/Sd9fd0245a9bb48d281bcc61c04ecbbaeT.webp?v=1699877554&width=600">Lien</a></li>
+                <li>Image Sac blanc en cuir sur Pinterest: <a href="https://fr.pinterest.com/pin/1099863540250908636/">Lien</a></li>
+                <li>Image Collier à perles blanches et noeud papillion noir sur Pinterest: <a href="https://fr.pinterest.com/pin/68747710222/">Lien</a></li>
+                <li>Image Lunettes de soleil sur Pinterest: <a href="https://fr.pinterest.com/pin/1124914813171103921/">Lien</a></li>
+                <li>Image Ceinture en chaîne argent sur Pinterest: <a href="https://fr.pinterest.com/pin/281543723587010/">Lien</a></li>
+                <li>Image Vase blanc en céramique sur Pinterest: <a href="https://fr.pinterest.com/pin/1108518895776058158/">Lien</a></li>
+                <li>Image Coussin en forme de marguerite sur Pinterest: <a href="https://fr.pinterest.com/pin/761882461992952418/">Lien</a></li>
+                <li>Image Télephone rose vintage sur Pinterest: <a href="https://fr.pinterest.com/pin/854980310517695510/">Lien</a></li>
+                <li>Image Miroir de princesse vintage vert sur Pinterest: <a href="https://fr.pinterest.com/pin/868772584341181974/">Lien</a></li>
+            </ul>
+
             <p style="font-weight: bold;">Sources Fontes</p>
             <ul>
                 <li>Barlow: <a href="https://fonts.google.com/specimen/Barlow" target="_blank">Lien </a></li>
