--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Restyle - Achetez et vendez des articles de seconde main avec style. Découvrez des produits uniques et abordables."
     />
+    <title>Restyle - Articles de Seconde Main</title>
     <meta property="og:title" content="Restyle - Articles de Seconde Main" />
     <meta
       property="og:description"
@@ -16,7 +15,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.restyle.com/images/preview.jpg"
+      content="https://www.re-style.fr/images/preview.jpg"
     />
     <meta property="og:url" content="https://www.re-style.fr" />
     <meta property="og:type" content="website" />
@@ -64,7 +63,6 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Restyle - Articles de Seconde Main</title>
   </head>
   <body>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
